crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__subscript__unclosed_slice_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/subscript/unclosed_slice_0.py
---
## AST

```
Module(
    ModModule {
        range: 0..10,
        body: [
            Expr(
                StmtExpr {
                    range: 0..10,
                    value: Subscript(
                        ExprSubscript {
                            range: 0..10,
                            value: Name(
                                ExprName {
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            slice: Slice(
                                ExprSlice {
                                    range: 2..10,
                                    lower: None,
                                    upper: Some(
                                        BinOp(
                                            ExprBinOp {
                                                range: 5..10,
                                                left: Name(
                                                    ExprName {
                                                        range: 5..6,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                op: Add,
                                                right: Name(
                                                    ExprName {
                                                        range: 9..10,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    step: None,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x[:
2 |
3 | x + y
  |      ^ Syntax Error: unexpected EOF while parsing
  |
